--- a/web-app/kapetanioswebapp_front/web/index.html
+++ b/web-app/kapetanioswebapp_front/web/index.html
@@ -34,5 +34,24 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDxktVxK9DlCDcnL0xi9LkbO0mQ8fACCQw",
+      authDomain: "kapetianosweb.firebaseapp.com",
+      projectId: "kapetianosweb",
+      storageBucket: "kapetianosweb.firebasestorage.app",
+      messagingSenderId: "869882757598",
+      appId: "1:869882757598:web:af297ae151b5b80f8fdd4f"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </body>
 </html>
